--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "enzyme": "^3.11.0",
+    "js-alert": "^1.0.4",
     "react": "^16.13.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
